--- a/index.html
+++ b/index.html
@@ -24,137 +24,146 @@
         
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-6 col-lg-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
+                <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5">
+                        <div class="flip-front p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
                             </div>
                         </div>
-                        <div class="flip-back d-flex align-items-center justify-content-center p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
+                        <div class="flip-back d-flex align-items-center justify-content-center p-5" >
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-light">Virtual Reality Project</h4> -->
+                                <i class="fas fa-mobile-alt"></i>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
+                <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5">
+                        <div class="flip-front p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
                             </div>
                         </div>
-                        <div class="flip-back d-flex align-items-center justify-content-center p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
+                        <div class="flip-back d-flex align-items-center justify-content-center p-5" >
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-light">Virtual Reality Project</h4> -->
+                                <i class="fas fa-mobile-alt"></i>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
+                <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5">
+                        <div class="flip-front p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
                             </div>
                         </div>
-                        <div class="flip-back d-flex align-items-center justify-content-center p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
+                        <div class="flip-back d-flex align-items-center justify-content-center p-5" >
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-light">Virtual Reality Project</h4> -->
+                                <i class="fas fa-mobile-alt"></i>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
+                <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5">
+                        <div class="flip-front p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
                             </div>
                         </div>
-                        <div class="flip-back d-flex align-items-center justify-content-center p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
+                        <div class="flip-back d-flex align-items-center justify-content-center p-5" >
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-light">Virtual Reality Project</h4> -->
+                                <i class="fas fa-mobile-alt"></i>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
+                <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5">
+                        <div class="flip-front p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
                             </div>
                         </div>
-                        <div class="flip-back d-flex align-items-center justify-content-center p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
+                        <div class="flip-back d-flex align-items-center justify-content-center p-5" >
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-light">Virtual Reality Project</h4> -->
+                                <i class="fas fa-mobile-alt"></i>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
+                <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5">
+                        <div class="flip-front p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
                             </div>
                         </div>
-                        <div class="flip-back d-flex align-items-center justify-content-center p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
+                        <div class="flip-back d-flex align-items-center justify-content-center p-5" >
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-light">Virtual Reality Project</h4> -->
+                                <i class="fas fa-mobile-alt"></i>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
+                <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5">
+                        <div class="flip-front p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
                             </div>
                         </div>
-                        <div class="flip-back d-flex align-items-center justify-content-center p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
+                        <div class="flip-back d-flex align-items-center justify-content-center p-5" >
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-light">Virtual Reality Project</h4> -->
+                                <i class="fas fa-mobile-alt"></i>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
+                <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5">
+                        <div class="flip-front p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
                             </div>
                         </div>
-                        <div class="flip-back d-flex align-items-center justify-content-center p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
+                        <div class="flip-back d-flex align-items-center justify-content-center p-5" >
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-light">Virtual Reality Project</h4> -->
+                                <i class="fas fa-mobile-alt"></i>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
+                <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5">
+                        <div class="flip-front p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
                             </div>
                         </div>
-                        <div class="flip-back d-flex align-items-center justify-content-center p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
+                        <div class="flip-back d-flex align-items-center justify-content-center p-5" >
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-light">Virtual Reality Project</h4> -->
+                                <i class="fas fa-mobile-alt"></i>
                             </div>
                         </div>
                     </div>
