--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         
     <body>
         
-        <div class="container-fluid">
+        <div class="coverer-fluid">
             <div class="row">
                 <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
+                        <div class="flip-front p-5" style="background: url(img/projects/Untitled-3-03.jpg) no-repeat; background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
@@ -42,7 +42,7 @@
                 </div>
                 <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
+                        <div class="flip-front p-5" style="background: url(img/projects/Untitled-3-04.jpg) no-repeat; background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
@@ -58,7 +58,7 @@
                 </div>
                 <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
+                        <div class="flip-front p-5" style="background: url(img/projects/Untitled-3-05.jpg) no-repeat; background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
+                        <div class="flip-front p-5" style="background: url(img/projects/Untitled-3-08.jpg) no-repeat; background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
@@ -90,7 +90,7 @@
                 </div>
                 <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
+                        <div class="flip-front p-5" style="background: url(img/projects/Untitled-3-07.jpg) no-repeat; background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
@@ -106,7 +106,7 @@
                 </div>
                 <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
+                        <div class="flip-front p-5" style="background: url(img/projects/Untitled-3-06.jpg) no-repeat; background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
@@ -122,7 +122,7 @@
                 </div>
                 <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
+                        <div class="flip-front p-5" style="background: url(img/projects/Untitled-3-09.jpg) no-repeat; background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
@@ -138,7 +138,7 @@
                 </div>
                 <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
+                        <div class="flip-front p-5" style="background: url(img/projects/Untitled-3-10.jpg) no-repeat; background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
@@ -154,7 +154,7 @@
                 </div>
                 <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5" style="background-image: url(img/projects/16.jpg); background-size: cover; background-position: center;">
+                        <div class="flip-front p-5" style="background: url(img/projects/Untitled-3-11.jpg) no-repeat; background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
