--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5" style="background: url(img/projects/Untitled-3-12.jpg) no-repeat; background-size: cover; background-position: center;">
+                        <div class="flip-front p-5" style="background: url(img/cards/Untitled-3-12.jpg) no-repeat; background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
@@ -35,14 +35,14 @@
                         <div class="flip-back d-flex align-items-center justify-content-center p-5" >
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-light">Virtual Reality Project</h4> -->
-                                <i class="fas fa-mobile-alt"></i>
+                                <img class="back" src="img/cards/back/Untitled-3-12.jpg" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5" style="background: url(img/projects/Untitled-3-13.jpg) no-repeat; background-size: cover; background-position: center;">
+                        <div class="flip-front p-5" style="background: url(img/cards/Untitled-3-13.jpg) no-repeat; background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
@@ -51,14 +51,14 @@
                         <div class="flip-back d-flex align-items-center justify-content-center p-5" >
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-light">Virtual Reality Project</h4> -->
-                                <i class="fas fa-mobile-alt"></i>
+                                <img class="back" src="img/cards/back/Untitled-3-13.jpg" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5" style="background: url(img/projects/Untitled-3-14.jpg) no-repeat; background-size: cover; background-position: center;">
+                        <div class="flip-front p-5" style="background: url(img/cards/Untitled-3-14.jpg) no-repeat; background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
@@ -67,14 +67,14 @@
                         <div class="flip-back d-flex align-items-center justify-content-center p-5" >
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-light">Virtual Reality Project</h4> -->
-                                <i class="fas fa-mobile-alt"></i>
+                                <img class="back" src="img/cards/back/Untitled-3-14.jpg" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5" style="background: url(img/projects/Untitled-3-15.jpg) no-repeat; background-size: cover; background-position: center;">
+                        <div class="flip-front p-5" style="background: url(img/cards/Untitled-3-15.jpg) no-repeat; background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
@@ -83,14 +83,14 @@
                         <div class="flip-back d-flex align-items-center justify-content-center p-5" >
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-light">Virtual Reality Project</h4> -->
-                                <i class="fas fa-mobile-alt"></i>
+                                <img class="back" src="img/cards/back/Untitled-3-15.jpg" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5" style="background: url(img/projects/Untitled-3-16.jpg) no-repeat; background-size: cover; background-position: center;">
+                        <div class="flip-front p-5" style="background: url(img/cards/Untitled-3-16.jpg) no-repeat; background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
@@ -99,14 +99,14 @@
                         <div class="flip-back d-flex align-items-center justify-content-center p-5" >
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-light">Virtual Reality Project</h4> -->
-                                <i class="fas fa-mobile-alt"></i>
+                                <img class="back" src="img/cards/back/Untitled-3-16.jpg" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5" style="background: url(img/projects/Untitled-3-17.jpg) no-repeat; background-size: cover; background-position: center;">
+                        <div class="flip-front p-5" style="background: url(img/cards/Untitled-3-17.jpg) no-repeat; background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
@@ -115,14 +115,14 @@
                         <div class="flip-back d-flex align-items-center justify-content-center p-5" >
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-light">Virtual Reality Project</h4> -->
-                                <i class="fas fa-mobile-alt"></i>
+                                <img class="back" src="img/cards/back/Untitled-3-17.jpg" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5" style="background: url(img/projects/Untitled-3-18.jpg) no-repeat; background-size: cover; background-position: center;">
+                        <div class="flip-front p-5" style="background: url(img/cards/Untitled-3-18.jpg) no-repeat; background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
@@ -131,14 +131,14 @@
                         <div class="flip-back d-flex align-items-center justify-content-center p-5" >
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-light">Virtual Reality Project</h4> -->
-                                <i class="fas fa-mobile-alt"></i>
+                                <img class="back" src="img/cards/back/Untitled-3-18.jpg" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5" style="background: url(img/projects/Untitled-3-19.jpg) no-repeat; background-size: cover; background-position: center;">
+                        <div class="flip-front p-5" style="background: url(img/cards/Untitled-3-19.jpg) no-repeat; background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
@@ -147,14 +147,14 @@
                         <div class="flip-back d-flex align-items-center justify-content-center p-5" >
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-light">Virtual Reality Project</h4> -->
-                                <i class="fas fa-mobile-alt"></i>
+                                <img class="back" src="img/cards/back/Untitled-3-19.jpg" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-4 appear-animation" data-appear-animation="flipInX" data-appear-animation-delay="600">
                     <div class="card flip-card flip-card-3d text-center rounded-0">
-                        <div class="flip-front p-5" style="background: url(img/projects/Untitled-3-20.jpg) no-repeat; background-size: cover; background-position: center;">
+                        <div class="flip-front p-5" style="background: url(img/cards/Untitled-3-20.jpg) no-repeat; background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-primary text-4">Presence in the Past (Underwater scanning of shipwrecks)</h4>
                                 <p>We have been involved in a research project to dive and capture photos for the Thistlegorm shipwreck at the Red sea to build a 3D model.</p>	 -->
@@ -163,7 +163,7 @@
                         <div class="flip-back d-flex align-items-center justify-content-center p-5" >
                             <div class="flip-content my-4">
                                 <!-- <h4 class="font-weight-bold text-color-light">Virtual Reality Project</h4> -->
-                                <i class="fas fa-mobile-alt"></i>
+                                <img class="back" src="img/cards/back/Untitled-3-20.jpg" alt="">
                             </div>
                         </div>
                     </div>
